@@ -5,7 +5,7 @@
 ;;  Copyright (c) 2003 Time Intermedia Corporation, All rights reserved.
 ;;  See COPYING for terms and conditions of using this software
 ;;
-;; $Id: kahua-shell.in,v 1.3 2004/02/16 12:55:34 tahara Exp $
+;; $Id: kahua-shell.in,v 1.4 2004/02/18 22:35:22 shiro Exp $
 
 (use srfi-1)
 (use gauche.net)
@@ -38,7 +38,7 @@
                 select-worker-processor)
                (else
                 (newline)
-                (display "Permission deny.")
+                (display "Permission denied.")
                 (newline)
                 (exit 0)))))))
 
@@ -84,19 +84,21 @@
                              (eqv? (get-keyword :worker-count w) wno))
                            workers)))
     (if the-worker
-      (make-worker-command-processor (get-keyword :worker-id the-worker))
+      (make-worker-command-processor
+       (get-keyword :worker-type the-worker)
+       (get-keyword :worker-id the-worker))
       (begin
         (format #t "No such worker: ~a\n" wno)
         select-worker-processor))))
 
-(define (make-worker-command-processor wid)
+(define (make-worker-command-processor type wid)
   (rec (worker-processor)
     (with-error-handler
         (lambda (e)
           (display (ref e 'message)) (flush)
           worker-processor)
       (lambda ()
-        (format #t "~a> " wid)
+        (format #t "~a(~a)> " type wid)
         (flush)
         (let1 expr (read)
           (cond
@@ -159,6 +161,7 @@
       ((conf-file "c=s" #f)
        (user "user=s" #f))
     (set-signal-handler! SIGINT  (lambda _ (exit 0)))
+    (set-signal-handler! SIGHUP  (lambda _ (exit 0)))
     (set-signal-handler! SIGTERM (lambda _ (exit 0)))
     (kahua-init conf-file :user user)
     (let loop ((command-processor login-processor))
